[tool.poetry]
name = "f-cli"
version = "0.0.0"  # updated on build
description = "Cloud Engineer toolkit"
license = "Apache-2.0"
authors = ["Kyle Finley <kyle@finley.sh>"]
readme = "README.md"
documentation = "https://f-cli.readthedocs.io/"
keywords = ["aws", "cli"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Utilities"
]
packages = [
  { include = "f_cli", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.3"
coloredlogs = "^10.0"
typing-extensions = { version = "^3.7", python = "<3.8" }

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
mypy = "^0.761"
pep8-naming = "^0.9.1"
pydocstyle = "<4.0.0"
pylint = "^2.4.4"
pytest = "^5.3.2"

[tool.poetry.scripts]
f-cli = "f_cli.cli:main"

[tool.poetry-dynamic-versioning]
# Sets the version of the package when running `poetry build`. The change is
# reverted after the build is complete.
enable = true

[tool.poetry-dynamic-versioning.substitution]
# When building, substitute the actual version number into the package variable.
# Note: when run source, the version will always display as "0.0.0".
files = ["src/f_cli/__init__.py"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
